--- a/index.html
+++ b/index.html
@@ -1,1 +1,31 @@
-Day 1 of Web Design :D
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <title>Marketing: Web Design</title>
+    <style>
+      h1 {
+         color: green;
+         background-color: lightgray;
+      }
+      p {
+         font-family: sans-serif;
+         margin-left: 10px;
+      }
+      strong {
+         background-color: lightgreen;
+         padding: 5px;
+      }
+      em {
+        color: lightgray;
+      }
+      </style>
+   </head>
+   <body>
+      <img src=https://assets3.thrillist.com/v1/image/2520608/1584x912/scale;webp=auto;jpeg_quality=60;progressive.jpg alt="Sea Bunny">
+      <h1>Sea Bunnies</h1>
+      <p>Sea Bunnies, also refered to by the scientific name of dorid nudibranch, they are a shell-less marine gastropod mollusc in the family Discodorididae.
+        Thier seemingly fur coats, which isn't actually fur, comes in all sorts of colors mainly white, yellow, and orange.</p>
+      <p>I wanted to practice the information I read about in this <strong>weeks readings</strong>! I really hope this works or that would be quite <em>awkward</em>.</p>
+   </body>
+</html>
