--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
       em {
         color: lightgray;
       }
+      img {
+        max-width: 50%;
+        max-height: 50%;
+      }
       </style>
    </head>
    <body>
