--- a/BACS200.html
+++ b/BACS200.html
@@ -1,3 +1,3 @@
 <h1>Welcome to my Practice Page for Web Design 200! </h1>
 <p>This page is dedicated to the in class activities and practices. </p>
-<img src="https://ih1.redbubble.net/image.1612000552.1066/fpp,small,lustre,wall_texture,product,750x1000.u1.jpg" alt=Owl House Meme>
+<img src="https://static.wikia.nocookie.net/hellokitty/images/d/d9/Sanrio_Characters_Littleforestfellow_Image009.png/revision/latest/scale-to-width-down/250?cb=20170523212143" alt=Little Forest Fellow from the company Sanrio>
