--- a/BACS200.html
+++ b/BACS200.html
@@ -1,3 +1,4 @@
 <h1>Welcome to my Practice Page for Web Design 200! </h1>
 <p>This page is dedicated to the in class activities and practices. </p>
-<img src="https://static.wikia.nocookie.net/hellokitty/images/d/d9/Sanrio_Characters_Littleforestfellow_Image009.png/revision/latest/scale-to-width-down/250?cb=20170523212143" alt=Little Forest Fellow from the company Sanrio>
+<img src="https://static.wikia.nocookie.net/hellokitty/images/9/93/Sanrio_Characters_Littleforestfellow_Image003.png/revision/latest?cb=20170405031410" alt=Little Forest Fellow from the company Sanrio>
+<a href="http://sanrio.shoutwiki.com/wiki/Littleforestfellow">Little Forest Fellow</a>
