--- a/BACS200.html
+++ b/BACS200.html
@@ -1,11 +1,11 @@
 <style>
 h1{
   background-color:#d9a6b8;
-  font-family: Avantgarde, TeX Gyre Adventor, URW Gothic L, sans-serif;
+  font-family: Avantgarde;
 }
 h2 {
   color: #d9a6b8;
-  font-family: Avantgarde, TeX Gyre Adventor, URW Gothic L, sans-serif;
+  font-family: Avantgarde;
   }
 <h1>Welcome to my <em>Practice</em> Page for Web Design 200! </h1>
 <p>This page is dedicated to the in class activities and practices. </p>
