--- a/BACS200.html
+++ b/BACS200.html
@@ -9,6 +9,7 @@ p{
    font-family: sans-serif;
    font-size: 12pt;
   }
+</style>
 <h1>Welcome to my <em>Practice</em> Page for Web Design.</h1>
 <p>This page is dedicated to the in class activities and practices. </p>
 <h2>My Interest & Inspiration</h2>
