--- a/inspire.html
+++ b/inspire.html
@@ -3,12 +3,15 @@
 <style>
     h1{
         background-color: #b1d6e1;
-        font-family: Georgia, 'Times New Roman', Times, serif}
+        font-family: Georgia, 'Times New Roman', Times, serif;}
     h2{
         font-color: #6f98b4;
-        font-family: Georgia, 'Times New Roman', Times, serif}
-    p{
-        font-family: Georgia, 'Times New Roman', Times, serif}
+        font-family: Georgia, 'Times New Roman', Times, serif;}
+    h3{
+        font-family: Georgia, 'Times New Roman', Times, serif;
+    }
+        p{
+        font-family: Georgia, 'Times New Roman', Times, serif;}
 
 </style>
 
@@ -19,7 +22,7 @@
 <body>
 <h1>Inspiration</h1>
 <h2>John Powell</h2>
-<img scr="https://m.media-amazon.com/images/M/MV5BZWQzOTViYTctMzE0My00MjM4LWE3YTctNzUwMzI1M2U4MDYxXkEyXkFqcGdeQXVyMTgxNzI2Nw@@._V1_.jpg" alt= "Musical composer, John Powell at Newman Scoring Stage during The Call of the Wild scoring.">
+<img src="https://m.media-amazon.com/images/M/MV5BZWQzOTViYTctMzE0My00MjM4LWE3YTctNzUwMzI1M2U4MDYxXkEyXkFqcGdeQXVyMTgxNzI2Nw@@._V1_.jpg" alt= "Musical composer, John Powell at Newman Scoring Stage during The Call of the Wild scoring.">
 <h3>About</h3>
 <p>As an artists, I often gravitate towards others especially those that radiate passion for their work. One of my inspirations is John Powell, a musical composer for several well known works, such as <em>How To Train Your Dragon</em>, <em>Solo: A Star Wars Story</em>, and <em>Rio</em>.</p>
 <p>His work is so wildly inspirational that his 2010 score for the film <em>How To Train Your Dragon</em> earned his first Academy Award nomination at the 83rd Axademy Award Ceremony!</p>
