--- a/inspire.html
+++ b/inspire.html
@@ -13,6 +13,10 @@
         p{
         font-family: Georgia, 'Times New Roman', Times, serif;}
 
+    img{
+        width: 50%;
+        height: auto;
+    }
 </style>
 
 <head>
