--- a/inspire.html
+++ b/inspire.html
@@ -11,8 +11,9 @@
         font-family: Georgia, 'Times New Roman', Times, serif;
     }
         p{
-        font-family: Georgia, 'Times New Roman', Times, serif;}
-
+        font-family: Georgia, 'Times New Roman', Times, serif;
+        margin-right: 25px;
+    }
     img{
         width: 50%;
         height: auto;
