--- a/inspire.html
+++ b/inspire.html
@@ -12,7 +12,7 @@
     }
         p{
         font-family: Georgia, 'Times New Roman', Times, serif;
-        margin-right: 25px;
+        margin-right: 50px;
     }
     img{
         width: 50%;
@@ -30,8 +30,14 @@
 <img src="https://m.media-amazon.com/images/M/MV5BZWQzOTViYTctMzE0My00MjM4LWE3YTctNzUwMzI1M2U4MDYxXkEyXkFqcGdeQXVyMTgxNzI2Nw@@._V1_.jpg" alt= "Musical composer, John Powell at Newman Scoring Stage during The Call of the Wild scoring.">
 <h3>About</h3>
 <p>As an artists, I often gravitate towards others especially those that radiate passion for their work. One of my inspirations is John Powell, a musical composer for several well known works, such as <em>How To Train Your Dragon</em>, <em>Solo: A Star Wars Story</em>, and <em>Rio</em>.</p>
-<p>His work is so wildly inspirational that his 2010 score for the film <em>How To Train Your Dragon</em> earned his first Academy Award nomination at the 83rd Axademy Award Ceremony! However he didn't start out this way, John Powell started his career as an assitant to the musical composer Patrick Doyle.</p>
+<p>His work is so wildly inspirational that his 2010 score for the film <em>How To Train Your Dragon</em> earned his first Academy Award nomination at the 83rd Axademy Award Ceremony! However he didn't start out this way, John Powell started his career as an assitant to the musical composer <a href= https://www.famouscomposers.net/patrick-doyle>John Doyle</a> before working on his own pieces. Throughout his work Powell had created several connecctions with other composers, therefore expanding his connections and knowledge.</p>
 
 <p>Learn more about his background <a href= "https://www.famouscomposers.net/john-powell">here.</a></p>
+
+<h3>Why He Inspires Me</h3>
+<p>My entire childhood consisted of animated movies that Powell had created the scores for. His music had inspired me to create and to get into the major I am currently studying (graphic design and illustration). Expanding my community and learning from my peers is another thing that I have taken away from his work.</p>
+<p>Plus <em>How To Train Your Dragon</em> will forever be one of my favorite movies and sound tracks! Personally I find myself waiting for another movie to drop that he is apart of.</p>
+
+<h4><em>"We must be trying to learn who we really are rather than trying to tell ourselves who we should be." </em>-John Powell</h4>
 </body>
 </html>
