--- a/inspire.html
+++ b/inspire.html
@@ -1,11 +1,11 @@
-<html>
+<!DOCTYPE html>
+<lang="en">
 
 <style>
     h1{
         background-color: #b1d6e1;
         font-family: Georgia, 'Times New Roman', Times, serif;}
     h2{
-        font-color: #6f98b4;
         font-family: Georgia, 'Times New Roman', Times, serif;}
     h3{
         font-family: Georgia, 'Times New Roman', Times, serif;
@@ -40,4 +40,5 @@
 
 <h4><em>"We must be trying to learn who we really are rather than trying to tell ourselves who we should be." </em>-John Powell</h4>
 </body>
+</lang>
 </html>
