--- a/template.html
+++ b/template.html
@@ -1,1 +1,15 @@
-
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <title>Template</title>
+        <!---Someday I will use CSS
+        <style>
+            
+        </style>    
+        -->
+    </head>
+    <body>
+        <h1>Page Title</h1>
+    </body>
+</html>
