--- a/index.html
+++ b/index.html
@@ -1,35 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <title>Marketing: Web Design</title>
-    <style>
-      h1 {
-         color: green;
-         background-color: lightgray;
-      }
-      p {
-         font-family: sans-serif;
-         margin-left: 10px;
-      }
-      strong {
-         background-color: lightgreen;
-         padding: 5px;
-      }
-      em {
-        color: lightgray;
-      }
-      img {
-        max-width: 50%;
-        max-height: 50%;
-      }
-      </style>
-   </head>
-   <body>
-      <h1>Sea Bunnies</h1>
-      <p>Sea Bunnies, also refered to by the scientific name of dorid nudibranch, they are a shell-less marine gastropod mollusc in the family Discodorididae.
-        Thier seemingly fur coats, which isn't actually fur, comes in all sorts of colors mainly white, yellow, and orange.</p>
-      <p>I wanted to practice the information I read about in this <strong>weeks readings</strong>! I really hope this works or that would be quite <em>awkward</em>.</p>
-      <img src=https://assets3.thrillist.com/v1/image/2520608/1584x912/scale;webp=auto;jpeg_quality=60;progressive.jpg alt="Sea Bunny">  
+<style>
+  h1{
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    color: midnightblue;
+  }
+  h2{
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  color: cornflowerblue;
+  }
+  h3{
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    color: cornflowerblue;
+  }
+  p{
+    font-family:'Times New Roman', Times, serif;
+    font-size: medium;
+  }
+  ol{
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 11pt;
+  }
+</style>  
+<head>
+    <meta charset="UTF-8"
+    <title>Index Page</title>
+  </head>
+  <body>
+    <h1>Welcome!</h1>
+    <img scr="https://64.media.tumblr.com/01d8ba03f8f29ab308539b6aa251a030/b86f62a67c7ca10f-67/s1280x1920/e1e88f3d20a0db9c490d84c1d1bce0d04a8a82ad.png" alt="Profile Picture">
+    <h2>Index Page</h2>
+    <p>This is my site for <strong>BACS200</strong>. Below you can see the links to other sites I have coded and designed!</p>
+
+    <h2><u>Links</u></h3>
+    <ol type="I">
+      <li><a href="inspire.html"><strong>Inspire</strong></a>: A page dedicated to someone who inspires my work.</li>
+      <li><a href="BACS200.html"><strong>BACS200</strong></a>: A page showcasing the work I have in class; participation.</li>
+      <li><a href="template.html"><strong>Template</strong></a>: A template that I use to create each page.</li>
+      <li><a href="amuse.html"><strong>Amuse</strong></a>: A page dedicated to my favorite websites!</li>
+    </ol>
   </body>
 </html>
