--- a/BACS200.html
+++ b/BACS200.html
@@ -16,3 +16,21 @@ p{
 <img src="https://64.media.tumblr.com/54da838da596e03c9faff69bb5b3cd84/cc2d3e1893cf654b-60/s1280x1920/d7ea571e996882be2099d754984169301008578c.jpg" alt=Little Forest Fellow from the company Sanrio>
 <h3>Links & Sources</h3>
 <a href="http://sanrio.shoutwiki.com/wiki/Littleforestfellow">Little Forest Fellow</a>
+
+<head>
+  <meta charset="UTF-8">
+  <title>Marketing: Web Design</title>
+  <style>
+    img {
+      max-width: 50%;
+      max-height: 50%;
+    }
+    </style>
+ </head>
+ <body>
+    <h1>Sea Bunnies</h1>
+    <p>Sea Bunnies, also refered to by the scientific name of dorid nudibranch, they are a shell-less marine gastropod mollusc in the family Discodorididae.
+      Thier seemingly fur coats, which isn't actually fur, comes in all sorts of colors mainly white, yellow, and orange.</p>
+    <p>I wanted to practice the information I read about in this <strong>weeks readings</strong>! I really hope this works or that would be quite <em>awkward</em>.</p>
+    <img src=https://assets3.thrillist.com/v1/image/2520608/1584x912/scale;webp=auto;jpeg_quality=60;progressive.jpg alt="Sea Bunny">  
+</body>
