--- a/educate.html
+++ b/educate.html
@@ -12,6 +12,6 @@
     <body>
         <h1>Page Title</h1>
         <p>Paragraph text</p>
-        <iframe src="https://www.ted.com/talks" title="Ted Talk Website"></iframe>
+        <div style="max-width:854px"><div style="position:relative;height:0;padding-bottom:56.25%"><iframe src="https://embed.ted.com/talks/lang/en/shannon_odell_when_are_you_actually_an_adult" width="854" height="480" style="position:absolute;left:0;top:0;width:100%;height:100%" frameborder="0" scrolling="no" allowfullscreen></iframe></div></div>
     </body>
 </html>
