--- a/educate.html
+++ b/educate.html
@@ -2,16 +2,11 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Template</title>
-        <!---Someday I will use CSS
-        <style>
-            <iframe src="url" title="description"></iframe> is for the ted talks
-        </style>    
-        -->
+        <title>Educate</title>
     </head>
     <body>
-        <h1>Page Title</h1>
-        <p>Paragraph text</p>
+        <h1>Educational Ted Talks</h1>
+        <p>On this page is a collection of a select few Ted Talks that I find inspirational and quite educational!</p>
         <div style="max-width:854px"><div style="position:relative;height:0;padding-bottom:56.25%"><iframe src="https://embed.ted.com/talks/lang/en/shannon_odell_when_are_you_actually_an_adult" width="854" height="480" style="position:absolute;left:0;top:0;width:100%;height:100%" frameborder="0" scrolling="no" allowfullscreen></iframe></div></div>
     </body>
 </html>
