--- a/index.html
+++ b/index.html
@@ -31,11 +31,13 @@
     <p>This is my site for <strong>BACS200</strong>. Below you can see the links to other sites I have coded and designed!</p>
 
     <h2><u>Links</u></h3>
-    <ol type="I">
+    <ol type="a">
       <li><a href="inspire.html"><strong>Inspire</strong></a>: A page dedicated to someone who inspires my work.</li>
       <li><a href="BACS200.html"><strong>BACS200</strong></a>: A page showcasing the work I have in class; participation.</li>
       <li><a href="template.html"><strong>Template</strong></a>: A template that I use to create each page.</li>
       <li><a href="amuse.html"><strong>Amuse</strong></a>: A page dedicated to my favorite websites!</li>
+      <li><a href="educate.html"><strong>Educate</strong></a>: A page of inspirational and educational Ted Talks!</li>
+      <li><a href="profile.html"><strong>Profile</strong></a>:An introduction of me and my special interest!</li>
     </ol>
     <img src="https://64.media.tumblr.com/01d8ba03f8f29ab308539b6aa251a030/b86f62a67c7ca10f-67/s1280x1920/e1e88f3d20a0db9c490d84c1d1bce0d04a8a82ad.png" alt="Profile Picture" width="25%">
   </body>
