--- a/educate.html
+++ b/educate.html
@@ -1,12 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+    <style>
+        h1{
+            font-family: "Times New Roman", Times, serif;
+            color: cornflower-blue;
+        }
+        h3{
+            font-family: "Times New Roman", Times, serif;
+            color: cornflower-blue;
+        }
+        p{
+            font-family: "Times New Roman", Times, serif;
+        }
+    </style>
     <head>
         <meta charset="UTF-8">
         <title>Educate</title>
     </head>
     <body>
         <h1>Educational Ted Talks</h1>
-        <p>On this page is a collection of a select few Ted Talks that I find inspirational and quite educational!</p>
-        <div style="max-width:854px"><div style="position:relative;height:0;padding-bottom:56.25%"><iframe src="https://embed.ted.com/talks/lang/en/shannon_odell_when_are_you_actually_an_adult" width="854" height="480" style="position:absolute;left:0;top:0;width:100%;height:100%" frameborder="0" scrolling="no" allowfullscreen></iframe></div></div>
+        <p>On this page is a collection of a select few Ted Talks that I find inspirational and quite educational!</p><br>
+        <h2>Give Yourself Permission to be Creative</h2>
+        <h3>"That's when art's not a luxury, it's a sustenance. We need it."&nbsp;Ethan Hawke</h3>
+        <p>Reflecting on moments that shaped his life, actor Ethan Hawke examines how courageous expression promotes healing and connection with one another -- and invites you to discover <strong>your own</strong> unbashed creativity. "There is no path till you walk it, you have to be willing to play the fool." he says.</p>
+        <div style="max-width:854px"><div style="position:relative;height:0;padding-bottom:56.25%"><iframe src="https://embed.ted.com/talks/lang/en/ethan_hawke_give_yourself_permission_to_be_creative" width="854" height="480" style="position:absolute;left:0;top:0;width:100%;height:100%" frameborder="0" scrolling="no" allowfullscreen></iframe></div></div>
     </body>
 </html>
