--- a/educate.html
+++ b/educate.html
@@ -18,7 +18,11 @@
         <title>Educate</title>
     </head>
     <body>
-        <section id=Ted Talks>
+        <p> Links to Page Chapters
+        <a href="#TedTalks">Ted Talks</a>
+        <a href="#RSA">RSA Animate</a>
+        </p><br><br>
+        <section id=TedTalks>
             <h1>Educational Ted Talks</h1>
             <p>On this page is a collection of a select few Ted Talks that I find inspirational and quite educational!</p><br>
             <h2>Give Yourself Permission to be Creative</h2>
