--- a/educate.html
+++ b/educate.html
@@ -39,7 +39,7 @@
             <h1>RSA Animate</h1>
             <p>This section of the page is dedicated to animations done by various creators, each illustrating different topics of importance.</p><br>
             <h2>Left Brain, Right Brain</h2>
-            <h3>"Now the last 50 years, [we are] living as part of an economically abundant, <strong>diverse</strong> communities in a fast changing global knowledge economy."
+            <h3>"Now the last 50 years, [we are] living as part of an economically abundant, <strong>diverse</strong> communities in a fast changing global knowledge economy."</h3>
             <p>This RSA Animate explores how brain and behavior research is increasingly being incorporated into political and policy debate.</p>
             <iframe height="450" width="800" src="https://youtu.be/Ql3Jp3ydfE8"></iframe>
             
