--- a/educate.html
+++ b/educate.html
@@ -41,12 +41,12 @@
             <h2>Left Brain, Right Brain</h2>
             <h3>"Now the last 50 years, [we are] living as part of an economically abundant, <strong>diverse</strong> communities in a fast changing global knowledge economy."</h3>
             <p>This RSA Animate explores how brain and behavior research is increasingly being incorporated into political and policy debate.</p>
-            <iframe height="450" width="800" src="https://youtu.be/Ql3Jp3ydfE8"></iframe>
+            <iframe height="450" width="800" src="https://youtube.com/embed/Ql3Jp3ydfE8"></iframe>
             
             <h2>Sleep or Die</h2>
             <h3>"Sleep is not an optional lifestyle luxury, sleep is non-negotiable."&nbsp;Matthew Walker</h3>
             <p>Bestselling author and sleep scientist Matthew Walker argues that we are sleepwalking into the greatest public health crisis of our time.  Sleep lowers blood pressure, enhances creativity, boosts the immune system, regulates blood sugar, stabilises mood, prevents cancer and increases fertility. It is one of the most-effective medications for all the leading causes of mortality – and it’s entirely natural, side-effect free and costs absolutely nothing. So why are we boasting about not getting enough?</p>
-                <iframe height="450" width="800" src=https://youtu.be/12XG-joFRBY></iframe>
+                <iframe height="450" width="800" src=https://youtube.com/embed/12XG-joFRBY></iframe>
         </section>
         <p><a href="index.html"><img src="https://cdn-icons-png.flaticon.com/512/4849/4849108.png" alt="Home Button" height="25%" width="auto"></a></p>
     </body>
