--- a/index.html
+++ b/index.html
@@ -39,6 +39,6 @@
       <li><a href="educate.html"><strong>Educate</strong></a>: A page of inspirational and educational Ted Talks!</li>
       <li><a href="profile.html"><strong>Profile</strong></a>:An introduction of me and my special interest!</li>
     </ol>
-    <img src="https://uncbears.com/images/responsive_2018/unco_logo_bear.svg" alt="UNCO Bear Logo" width="25%">
+    <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2F1000logos.net%2Fnorthern-colorado-bears-logo%2F&psig=AOvVaw0Z8VxmkJOym88ZuqxDexPG&ust=1675897532422000&source=images&cd=vfe&ved=0CA8QjRxqFwoTCNiy8vrChP0CFQAAAAAdAAAAABAE" alt="UNCO Bear Logo" width="25%">
   </body>
 </html>
