--- a/index.html
+++ b/index.html
@@ -39,6 +39,6 @@
       <li><a href="educate.html"><strong>Educate</strong></a>: A page of inspirational and educational Ted Talks!</li>
       <li><a href="profile.html"><strong>Profile</strong></a>:An introduction of me and my special interest!</li>
     </ol>
-    <img src="https://64.media.tumblr.com/01d8ba03f8f29ab308539b6aa251a030/b86f62a67c7ca10f-67/s1280x1920/e1e88f3d20a0db9c490d84c1d1bce0d04a8a82ad.png" alt="Profile Picture" width="25%">
+    <img src="UNCO Logo.png" alt="UNCO Bear Logo">
   </body>
 </html>
