--- a/test.html
+++ b/test.html
@@ -1,1 +1,33 @@
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <title>Test</title>
+        <!---Someday I will use CSS
+        <style>
+            
+        </style>    
+        -->
+    </head>
+    <body>
+      <h1>Testing Page</h1>
+      <table>
+        <thead style="background-color: gray">
+          <tr>
+            <th style="border: 2px solid black">Page Name</th>
+            <th style="border: 2px solid black">URL</th>
+            <th style="border: 2px solid black">Validation</th>
+          </tr>
+        </thread>
+        <tbody>
+          <tr>
+            <th>Template</th>
+            <td><a href="template.html">https://long3016.github.io/template.html</a></td>
+            <td><a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Flong3016.github.io%2Ftemplate.html">Validate</a></td>
+        </tr>
+          text
+        </tbody>
+      </table>
+    </body>
+</html>
 
