--- a/test.html
+++ b/test.html
@@ -3,15 +3,13 @@
     <head>
         <meta charset="UTF-8">
         <title>Test</title>
-        <!---Someday I will use CSS
         <style>
             
-        </style>    
-        -->
+        </style>
     </head>
     <body>
       <h1>Testing Page</h1>
-      <table>
+      <table style="width:125%">
         <thead style="background-color: gray">
           <tr>
             <th style="border: 2px solid black">Page Name</th>
@@ -25,7 +23,6 @@
             <td><a href="template.html">https://long3016.github.io/template.html</a></td>
             <td><a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Flong3016.github.io%2Ftemplate.html">Validate</a></td>
         </tr>
-          text
         </tbody>
       </table>
     </body>
