--- a/test.html
+++ b/test.html
@@ -9,7 +9,7 @@
     </head>
     <body>
       <h1>Testing Page</h1>
-      <table style="width:125%">
+      <table style="width:100%">
         <thead style="background-color: gray">
           <tr>
             <th style="border: 2px solid black">Page Name</th>
@@ -19,10 +19,34 @@
         </thread>
         <tbody>
           <tr>
-            <th>Template</th>
-            <td><a href="template.html">https://long3016.github.io/template.html</a></td>
-            <td><a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Flong3016.github.io%2Ftemplate.html">Validate</a></td>
-        </tr>
+                <th>Template</th>
+                <td><a href="template.html">https://long3016.github.io/template.html</a></td>
+                <td><a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Flong3016.github.io%2Ftemplate.html">Validate</a></td>
+            </tr>
+            <tr>
+                <th>Amuse</th>
+                <td><a href="amuse.html">https://long3016.github.io/amuse.html</a></td>
+                <td><a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Flong3016.github.io%2Famuse.html">Validate</a></td>
+            <tr>
+                <th>Inspire</th>
+                <td><a href="inspire.html">https://long3016.github.io/inspire.html</a></td>
+                <td><a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Flong3016.github.io%2Finspire.html">Validate</a></td>
+            </tr>
+            <tr>
+                <th>BACS200</th>
+                <td><a href="BACS200.html"</a></td>
+                <td><a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Flong3016.github.io%2FBACS200.html">Validate</a></td>
+            </tr>
+            <tr>
+                <th>Educate</th>
+                <td><a href="educate.html">https://long3016.github.io/educate.html</a></td>
+                <td><a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Flong3016.github.io%2Feducate.html">Validate</a></td>
+            </tr>
+            <tr>
+                <th>Profile</th>
+                <td><a href="profile.html">https://long3016.github.io/profile.html</a></td>
+                <td><a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Flong3016.github.io%2Fprofile.html">Validate</a></td>
+            </tr>
         </tbody>
       </table>
     </body>
