--- a/BACS200.html
+++ b/BACS200.html
@@ -1,3 +1,8 @@
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <title>BACS200</title>
 <style>
 h1{
   background-color:#d9a6b8;
