--- a/educate.html
+++ b/educate.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-    <style>
-        h1{
-            font-family: "Times New Roman", Times, serif;
-            color: #6495ED;
-        }
-        h3{
-            font-family: "Times New Roman", Times, serif;
-            color: #6495ED;
-        }
-        p{
-            font-family: "Times New Roman", Times, serif;
-        }
-    </style>
     <head>
         <meta charset="UTF-8">
         <title>Educate</title>
+        <style>
+            h1{
+                font-family: "Times New Roman", Times, serif;
+                color: #6495ED;
+            }
+            h3{
+                font-family: "Times New Roman", Times, serif;
+                color: #6495ED;
+            }
+            p{
+                font-family: "Times New Roman", Times, serif;
+            }
+        </style>
     </head>
     <body>
         <p> Links to Page Chapters
@@ -28,11 +28,11 @@
             <h2>Give Yourself Permission to be Creative</h2>
             <h3>"That's when art's not a luxury, it's a sustenance. We need it."&nbsp;Ethan Hawke</h3>
             <p>Reflecting on moments that shaped his life, actor Ethan Hawke examines how courageous expression promotes healing and connection with one another -- and invites you to discover <strong>your own</strong> unbashed creativity. "There is no path till you walk it, you have to be willing to play the fool." he says.</p>
-            <div style="max-width:854px"><div style="position:relative;height:0;padding-bottom:56.25%"><iframe src="https://embed.ted.com/talks/lang/en/ethan_hawke_give_yourself_permission_to_be_creative" width="854" height="480" style="position:absolute;left:0;top:0;width:100%;height:100%" frameborder="0" scrolling="no" allowfullscreen></iframe></div></div><br><br>
+            <div style="max-width:854px"><div style="position:relative;height:0;padding-bottom:56.25%"><iframe src="https://embed.ted.com/talks/lang/en/ethan_hawke_give_yourself_permission_to_be_creative" width="854" height="480" style="position:absolute;left:0;top:0;width:100%;height:100%" allowfullscreen></iframe></div></div><br><br>
             <h2>When Are You Actually an Adult?</h2>
             <h3>"Each person's journey to adulthood is unique, influenced by genetics, environment, and experience."&nbsp;Alexandra Panzer</h3>
             <p>Most countries recognize 18 as the start of adulthood by granting various freedoms and privileges. Yet there's no <strong>exact</strong> age or moment in development that we can point to as having reached full maturity. If there's no consensus on exactly when we reach maturity, when do we actually become adults? Shannon Odell shares how scientists define adulthood using stages of brain development.</p>
-            <div style="max-width:854px"><div style="position:relative;height:0;padding-bottom:56.25%"><iframe src="https://embed.ted.com/talks/lang/en/shannon_odell_when_are_you_actually_an_adult" width="854" height="480" style="position:absolute;left:0;top:0;width:100%;height:100%" frameborder="0" scrolling="no" allowfullscreen></iframe></div></div><br><br>
+            <div style="max-width:854px"><div style="position:relative;height:0;padding-bottom:56.25%"><iframe src="https://embed.ted.com/talks/lang/en/shannon_odell_when_are_you_actually_an_adult" width="854" height="480" style="position:absolute;left:0;top:0;width:100%;height:100%" allowfullscreen></iframe></div></div><br><br>
         </section>
         
         <section id=RSA>
@@ -48,6 +48,6 @@
             <p>Bestselling author and sleep scientist Matthew Walker argues that we are sleepwalking into the greatest public health crisis of our time.  Sleep lowers blood pressure, enhances creativity, boosts the immune system, regulates blood sugar, stabilises mood, prevents cancer and increases fertility. It is one of the most-effective medications for all the leading causes of mortality – and it’s entirely natural, side-effect free and costs absolutely nothing. So why are we boasting about not getting enough?</p>
                 <iframe height="450" width="800" src=https://youtube.com/embed/12XG-joFRBY></iframe>
         </section>
-        <p><a href="index.html"><img src="https://cdn-icons-png.flaticon.com/512/4849/4849108.png" alt="Home Button" height="75" width="auto"></a></p>
+        <p><a href="index.html"><img src="https://cdn-icons-png.flaticon.com/512/4849/4849108.png" alt="Home Button" height="25"></a></p>
     </body>
 </html>
