--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-<style>
+<head>
+      <meta charset="UTF-8">
+      <title>Index</title>
+  <style>
   h1{
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     color: midnightblue;
@@ -21,16 +24,14 @@
     font-family: 'Times New Roman', Times, serif;
     font-size: 11pt;
   }
-</style>  
-<head>
-    <meta charset="UTF-8"
-  </head>
+  </style>
+</head>
   <body>
     <h1>Welcome!</h1>
     <h2>Index Page</h2>
     <p>This is my site for <strong>BACS200</strong>. Below you can see the links to other sites I have coded and designed!</p>
 
-    <h2><u>Links</u></h3>
+    <h2><u>Links</u></h2>
     <ol type="a">
       <li><a href="inspire.html"><strong>Inspire</strong></a>: A page dedicated to someone who inspires my work.</li>
       <li><a href="BACS200.html"><strong>BACS200</strong></a>: A page showcasing the work I have in class; participation.</li>
