--- a/inspire.html
+++ b/inspire.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
-<lang="en">
-
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Inspire Me</title>
 <style>
     h1{
         background-color: #b1d6e1;
@@ -19,11 +21,7 @@
         height: auto;
     }
 </style>
-
-<head>
-  <title>Inspire Me</title>
 </head>
-
 <body>
 <h1>Inspiration</h1>
 <h2>John Powell</h2>
@@ -40,5 +38,3 @@
 
 <h4><em>"We must be trying to learn who we really are rather than trying to tell ourselves who we should be." </em>-John Powell</h4>
 </body>
-</lang>
-</html>
