--- a/profile.html
+++ b/profile.html
@@ -20,13 +20,14 @@
     <body>
         <h1>Personal Profile</h1>
         <h2>Payton Long, Graphic Deisgn Major with a minor in Digital Marketing</h2>
-        <img src="Payton Long Image.jpeg" alt="Picture of Me" height="300" width="auto">
+        <img src="PaytonLongImage.jpeg" alt="Picture of Me" height="300">
         <h2><u>Special Interest</u></h2>
         <ol type="I">
             <li><strong>Animation</strong></li>
-             <ol type="i"><li>Stop Motion, 3D Models</li>
-                <li>Hand Drawn 2D Animation</li><br>
-            </ol>
+                 <ol type="i">
+                     <li>Stop Motion, 3D Models</li>
+                     <li>Hand Drawn 2D Animation</li><br>
+                </ol>
             <img src="https://media.npr.org/assets/artslife/movies/2009/11/fantastic-mr-fox/anderson-puppets-d02f5a243255727719677a9d579fffede9c31cf6-s1100-c50.jpg" alt="Set of Fantastic Mr Fox" height="150" width="auto"><br><br>
             <li><strong>Graphic Design</strong></li>
             <ol type="i">
