--- a/profile.html
+++ b/profile.html
@@ -23,42 +23,38 @@
         <img src="PaytonLongImage.jpeg" alt="Picture of Me" height="300">
         <h2><u>Special Interest</u></h2>
         <ol type="I">
-            <li><strong>Animation</strong>
+            <li><strong>Animation</strong></li>
                  <ol type="i">
                      <li>Stop Motion, 3D Models</li>
                      <li>Hand Drawn 2D Animation</li>
                 </ol>
-            </li>
         </ol>
-            <img src="https://media.npr.org/assets/artslife/movies/2009/11/fantastic-mr-fox/anderson-puppets-d02f5a243255727719677a9d579fffede9c31cf6-s1100-c50.jpg" alt="Set of Fantastic Mr Fox" height="150" width="auto"><br><br>
+            <img src="https://media.npr.org/assets/artslife/movies/2009/11/fantastic-mr-fox/anderson-puppets-d02f5a243255727719677a9d579fffede9c31cf6-s1100-c50.jpg" alt="Set of Fantastic Mr Fox" height="150"><br><br>
         <ol type="I">    
-          <li><strong>Graphic Design</strong>
+            <li><strong>Graphic Design</strong></li>
             <ol type="i">
                 <li>Product Design</li>
                 <li>Logo Design</li>
                 <li>Illustrations</li>
             </ol>
-            </li>
         </ol>
-            <img src="https://d2zhlgis9acwvp.cloudfront.net/images/uploaded/graphic-designers.jpg" alt="Graphic Designer working at a computer" height="150" width="auto"><br><br>
+            <img src="https://d2zhlgis9acwvp.cloudfront.net/images/uploaded/graphic-designers.jpg" alt="Graphic Designer working at a computer" height="150"><br><br>
         <ol type="I">    
-           <li><strong>Video Games</li></strong>
+            <li><strong>Video Games</li></strong></li>
             <ol type="i">
                 <li>Potion Permit</li>
                 <li>Undertale</li>
                 <li>Minecraft</li>
-            </ol>
-            </li>
+         </ol>
         </ol>
             <img src="https://cdn.akamai.steamstatic.com/steam/apps/1337760/capsule_616x353.jpg?t=1674727254" alt="Cover of Potion Permit" height="150" width="auto"><br><br>
             <ol type="I">
-                <li><strong>Graphic Novels & Manga</strong>
+                <li><strong>Graphic Novels & Manga</strong></li>
                 <ol type="i">
                     <li><em>The Magic Fish</em> by Trung Le Nguyen</li>
                     <li><em>The Prince & The Dressmaker</em> by Jen Wang</li>
                     <li><em>Blue Period</em> by Tsubasa Yamaguchi</li>
                 </ol>
-             </li>
             </ol>
             <img src="https://occ.a.nflxso.net/dnm/api/v6/E8vDc_W8CLv7-yMQu8KMEC7Rrr8/AAAABa9SmMX1QMnK5NISpfAN6_z5DdGjULQagnosSdsRK2QltygQdsUkfhE0-whyUz9Kvh0aNy8pN4aVk7PEVZAScMeRRBld7hKbhy6i.jpg?r=ee2" alt="Screencapture of Blue Period" height="150" width="auto"><br><br>
     </body>
