--- a/profile.html
+++ b/profile.html
@@ -23,11 +23,12 @@
         <img src="PaytonLongImage.jpeg" alt="Picture of Me" height="300">
         <h2><u>Special Interest</u></h2>
         <ol type="I">
-            <li><strong>Animation</strong></li>
+            <li><strong>Animation</strong>
                  <ol type="i">
                      <li>Stop Motion, 3D Models</li>
                      <li>Hand Drawn 2D Animation</li>
                 </ol>
+                </li>
         </ol>
             <img src="https://media.npr.org/assets/artslife/movies/2009/11/fantastic-mr-fox/anderson-puppets-d02f5a243255727719677a9d579fffede9c31cf6-s1100-c50.jpg" alt="Set of Fantastic Mr Fox" height="150"><br><br>
         <ol type="I">    
@@ -40,7 +41,7 @@
         </ol>
             <img src="https://d2zhlgis9acwvp.cloudfront.net/images/uploaded/graphic-designers.jpg" alt="Graphic Designer working at a computer" height="150"><br><br>
         <ol type="I">    
-            <li><strong>Video Games</li></strong></li>
+            <li><strong>Video Games</strong></li>
             <ol type="i">
                 <li>Potion Permit</li>
                 <li>Undertale</li>
