--- a/test.html
+++ b/test.html
@@ -15,8 +15,7 @@
             <th style="border: 2px solid black">Page Name</th>
             <th style="border: 2px solid black">URL</th>
             <th style="border: 2px solid black">Validation</th>
-          </tr>
-        </thread>
+          </tr></thread>
         <tbody>
           <tr>
                 <th>Template</th>
