--- a/test.html
+++ b/test.html
@@ -9,8 +9,8 @@
     </head>
     <body>
       <h1>Testing Page</h1>
-      <table style="width:100%">
-        <thead style="background-color: gray">
+      <table style="width:75%">
+        <thead style="background-color: rgb(182, 141, 141)">
           <tr>
             <th style="border: 2px solid black">Page Name</th>
             <th style="border: 2px solid black">URL</th>
@@ -46,6 +46,11 @@
                 <th>Profile</th>
                 <td><a href="profile.html">https://long3016.github.io/profile.html</a></td>
                 <td><a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Flong3016.github.io%2Fprofile.html">Validate</a></td>
+            </tr>
+            <tr>
+              <th>Testing Page</th>
+              <td><a href="test.html">https://long3016.github.io/test.html</a></td>
+              <td><a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Flong3016.github.io%2Ftest.html">Validate</a></td>
             </tr>
         </tbody>
       </table>
