--- a/test.html
+++ b/test.html
@@ -10,7 +10,7 @@
     <body>
       <h1>Testing Page</h1>
       <table style="width:75%">
-        <thead style="background-color: rgb(182, 141, 141)">
+        <thead style="background-color: lightgray">
           <tr>
             <th style="border: 2px solid black">Page Name</th>
             <th style="border: 2px solid black">URL</th>
