--- a/test.html
+++ b/test.html
@@ -4,13 +4,18 @@
         <meta charset="UTF-8">
         <title>Test</title>
         <style>
-            
+            thead{
+              background-color:gray;
+            }
+            th{
+              background-color: lightgray;
+            }
         </style>
     </head>
     <body>
       <h1>Testing Page</h1>
       <table style="width:75%">
-        <thead style="background-color: lightgray">
+        <thead style="background-color: gray">
           <tr>
             <th style="border: 2px solid black">Page Name</th>
             <th style="border: 2px solid black">URL</th>
