--- a/test.html
+++ b/test.html
@@ -5,55 +5,58 @@
         <title>Test</title>
         <style>
             thead{
-              background-color:gray;
+              background-color:lightblue;
             }
-            th{
-              background-color: lightgray;
+            td{
+              font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+            }
+            .rheader{
+              color: rgb(82, 103, 110);
             }
         </style>
     </head>
     <body>
       <h1>Testing Page</h1>
       <table style="width:75%">
-        <thead style="background-color: gray">
+        <thead>
           <tr>
-            <th style="border: 2px solid black">Page Name</th>
-            <th style="border: 2px solid black">URL</th>
-            <th style="border: 2px solid black">Validation</th>
+            <th style="border: 2px solid rgb(131, 167, 179)" class="cheader">Page Name</th>
+            <th style="border: 2px solid rgb(131, 167, 179)" class="cheader">URL</th>
+            <th style="border: 2px solid rgb(131, 167, 179)" class="cheader">Validation</th>
           </tr>
         </thead>
         <tbody>
           <tr>
-                <th>Template</th>
+                <th class="rheader">Template</th>
                 <td><a href="template.html">https://long3016.github.io/template.html</a></td>
                 <td><a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Flong3016.github.io%2Ftemplate.html">Validate</a></td>
             </tr>
             <tr>
-                <th>Amuse</th>
+                <th class="rheader">Amuse</th>
                 <td><a href="amuse.html">https://long3016.github.io/amuse.html</a></td>
                 <td><a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Flong3016.github.io%2Famuse.html">Validate</a></td>
             <tr>
-                <th>Inspire</th>
+                <th class="rheader">Inspire</th>
                 <td><a href="inspire.html">https://long3016.github.io/inspire.html</a></td>
                 <td><a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Flong3016.github.io%2Finspire.html">Validate</a></td>
             </tr>
             <tr>
-                <th>BACS200</th>
+                <th class="rheader">BACS200</th>
                 <td><a href="BACS200.html">https://long3016.github.io/BACS200.html</a></td>
                 <td><a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Flong3016.github.io%2FBACS200.html">Validate</a></td>
             </tr>
             <tr>
-                <th>Educate</th>
+                <th class="rheader">Educate</th>
                 <td><a href="educate.html">https://long3016.github.io/educate.html</a></td>
                 <td><a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Flong3016.github.io%2Feducate.html">Validate</a></td>
             </tr>
             <tr>
-                <th>Profile</th>
+                <th class="rheader">Profile</th>
                 <td><a href="profile.html">https://long3016.github.io/profile.html</a></td>
                 <td><a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Flong3016.github.io%2Fprofile.html">Validate</a></td>
             </tr>
             <tr>
-              <th>Testing Page</th>
+              <th class="rheader">Testing Page</th>
               <td><a href="test.html">https://long3016.github.io/test.html</a></td>
               <td><a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Flong3016.github.io%2Ftest.html">Validate</a></td>
             </tr>
