--- a/test.html
+++ b/test.html
@@ -26,10 +26,15 @@
           </tr>
         </thead>
         <tbody>
-          <tr>
+            <tr>
                 <th class="rheader">Template</th>
                 <td><a href="template.html">https://long3016.github.io/template.html</a></td>
                 <td><a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Flong3016.github.io%2Ftemplate.html">Validate</a></td>
+            </tr>
+            <tr>
+                <th class="rheader">Index</th>
+                <td><a href="index.html">https://long3016.github.io/index.html</a></td>
+                <td><a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Flong3016.github.io%2Findex.html">Validate</a></td>
             </tr>
             <tr>
                 <th class="rheader">Amuse</th>
