--- a/index.html
+++ b/index.html
@@ -39,6 +39,6 @@
       <li><a href="inspire.html"><strong>Inspire</strong></a>: A page dedicated to someone who inspires my work.</li>
       <li><a href="profile.html"><strong>Profile</strong></a>:An introduction of me and my special interest!</li>
     </ol>
-    <img src="UNCOLogo.png" alt="UNCO Bear Logo">
+    <img src="images/UNCOLogo.png" alt="UNCO Bear Logo">
   </body>
 </html>
