--- a/profile.html
+++ b/profile.html
@@ -20,7 +20,7 @@
     <body>
         <h1>Personal Profile</h1>
         <h2>Payton Long, Graphic Deisgn Major with a minor in Digital Marketing</h2>
-        <img src="PaytonLongImage.jpeg" alt="Picture of Me" height="300">
+        <img id="mainpic" src="PaytonLongImage.jpeg" alt="Picture of Me" height="300">
         <h2><u>Special Interest</u></h2>
         <ol type="I">
             <li><strong>Animation</strong>
@@ -61,5 +61,6 @@
                 </li>
             </ol>
             <img src="https://occ.a.nflxso.net/dnm/api/v6/E8vDc_W8CLv7-yMQu8KMEC7Rrr8/AAAABa9SmMX1QMnK5NISpfAN6_z5DdGjULQagnosSdsRK2QltygQdsUkfhE0-whyUz9Kvh0aNy8pN4aVk7PEVZAScMeRRBld7hKbhy6i.jpg?r=ee2" alt="Screencapture of Blue Period" height="150"><br><br>
-    </body>
+            <p><a href="index.html"><img src="https://cdn-icons-png.flaticon.com/512/6490/6490332.png" alt="Home Page" width="35"></a></p>
+        </body>
 </html>
