--- a/profile.html
+++ b/profile.html
@@ -20,7 +20,7 @@
     <body>
         <h1>Personal Profile</h1>
         <h2>Payton Long, Graphic Deisgn Major with a minor in Digital Marketing</h2>
-        <img id="mainpic" src="PaytonLongImage.jpeg" alt="Picture of Me" height="300">
+        <img id="mainpic" src="images/PaytonLongImage.jpeg" alt="Picture of Me" height="300">
         <h2><u>Special Interest</u></h2>
         <ol type="I">
             <li><strong>Animation</strong>
