--- a/inspire.html
+++ b/inspire.html
@@ -21,7 +21,7 @@
 <body>
 <h1>Inspiration</h1>
 <h2>John Powell</h2>
-<img src="https://m.media-amazon.com/images/M/MV5BZWQzOTViYTctMzE0My00MjM4LWE3YTctNzUwMzI1M2U4MDYxXkEyXkFqcGdeQXVyMTgxNzI2Nw@@._V1_.jpg" alt= "Musical composer, John Powell at Newman Scoring Stage during The Call of the Wild scoring." width="50%">
+<img src="https://m.media-amazon.com/images/M/MV5BZWQzOTViYTctMzE0My00MjM4LWE3YTctNzUwMzI1M2U4MDYxXkEyXkFqcGdeQXVyMTgxNzI2Nw@@._V1_.jpg" alt= "Musical composer, John Powell at Newman Scoring Stage during The Call of the Wild scoring." width="550">
 <h3>About</h3>
 <p>As an artists, I often gravitate towards others especially those that radiate passion for their work. One of my inspirations is John Powell, a musical composer for several well known works, such as <em>How To Train Your Dragon</em>, <em>Solo: A Star Wars Story</em>, and <em>Rio</em>.</p>
 <p>His work is so wildly inspirational that his 2010 score for the film <em>How To Train Your Dragon</em> earned his first Academy Award nomination at the 83rd Axademy Award Ceremony! However he didn't start out this way, John Powell started his career as an assitant to the musical composer <a href= https://www.famouscomposers.net/patrick-doyle>John Doyle</a> before working on his own pieces. Throughout his work Powell had created several connecctions with other composers, therefore expanding his connections and knowledge.</p>
